# openemr-mandee

./: AGENT_ARCHITECTURE.md  AI_COST_ANALYSIS.md  BOUNTY.md  DEMO_SCRIPT.md  DEPLOYMENT.md  DEVELOPMENT_PLAN.md  EVAL_RESULTS.md  FINAL_TASK_TRACKER.md  README.md  SOCIAL_POST.md  package.json
agent-service/: .env.example  Dockerfile  EVAL_RESULTS.md  README.md  eval_results_b2.txt  eval_results_bounty2.txt  eval_results_bounty3.txt  eval_results_bounty4.txt  eval_results_features.txt  eval_results_features2.txt  eval_results_final.txt  eval_results_output.txt  eval_results_with_bounty.txt  pyproject.toml  requirements.txt
agent-service/app/: __init__.py  config.py  main.py
agent-service/app/agent/: __init__.py  graph.py  state.py
agent-service/app/api/: __init__.py  middleware.py  routes.py  schemas.py
agent-service/app/clients/: __init__.py  npi.py  openemr.py  rxnorm.py
agent-service/app/memory/: __init__.py
agent-service/app/observability/: __init__.py  langsmith.py  metrics.py
agent-service/app/tools/: appointment_check.py  cancel_schedule.py  drug_interaction.py  drug_interactions_data.py  generate_schedule_pdf.py  insurance_coverage.py  insurance_provider_search.py  lab_results_lookup.py  med_schedule.py  medication_list.py  patient_education_generator.py  patient_summary.py  provider_search.py  registry.py  scheduling.py  symptom_data.py  symptom_lookup.py
agent-service/app/utils/: response_templates.py
agent-service/docs/: API_REFERENCE.md  TOOL_DEVELOPMENT.md
agent-service/evals/: runner.py  timed_queries.py
agent-service/tests/: __init__.py
(+62 files in other folders)
