# CareTopicz Agent Service - Python project config
[project]
name = "caretopicz-agent"
version = "0.1.0"
description = "AI clinical assistant agent for OpenEMR"
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "evals", "tests"]
exclude = [".venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # line length handled by formatter

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
